Parse data from API

--- a/RutaMD/Info.plist
+++ b/RutaMD/Info.plist
@@ -8,6 +8,6 @@
 		<false/>
 	</dict>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDarkContent</string>
+	<string>UIStatusBarStyleDefault</string>
 </dict>
 </plist>
